feat: add burger button

--- a/src/shared/ui/buttons/button/style.css
+++ b/src/shared/ui/buttons/button/style.css
@@ -1,65 +1,3 @@
-<script lang="ts" setup>
-import { computed, type PropType } from 'vue';
-import BaseSpinner from '@/shared/ui/spinner/BaseSpinner.vue';
-const emit = defineEmits(['click']);
-
-const props = defineProps({
-  type: {
-    type: String as PropType<
-      'default' | 'filled' | 'outline-light' | 'outline-dark'
-    >,
-    default: 'default'
-  },
-  align: {
-    type: String as PropType<'left' | 'center' | 'right'>,
-    default: 'center'
-  },
-  label: {
-    type: String,
-    default: ''
-  },
-  disabled: {
-    type: Boolean,
-    default: false
-  },
-  loading: {
-    type: Boolean,
-    default: false
-  }
-});
-
-const classes = computed(() => {
-  return {
-    button: true,
-    [props.type]: true
-  };
-});
-
-const active = computed(() => !props.disabled && !props.loading);
-
-function emitClick(e: Event) {
-  if (e === void 0 || e.defaultPrevented) return;
-  e.cancelable && e.preventDefault();
-  e.stopPropagation();
-  active.value && emit('click', e);
-}
-</script>
-
-<template>
-  <button :class="classes" @click="emitClick" :disabled="!active" value="Click">
-    <div :class="loading ? 'hidden' : 'visible'">
-      <slot v-if="!label" />
-      <template v-else>
-        {{ label }}
-      </template>
-    </div>
-    <Transition>
-      <BaseSpinner v-if="loading" absolute color="#fff" />
-    </Transition>
-  </button>
-</template>
-
-<style scoped>
 .button {
   display: flex;
   align-items: center;
@@ -87,10 +25,10 @@ function emitClick(e: Event) {
 .default {
   position: relative;
   transform-style: preserve-3d;
-  color: #000;
+  color: var(--color__font);
   font-weight: 500;
   line-height: normal;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: var(--color__white);
   &::before {
     content: '';
     display: flex;
@@ -112,8 +50,8 @@ function emitClick(e: Event) {
   }
   &:active:not(:disabled),
   &.active:not(:disabled) {
-    color: #fff;
-    background: #00093c;
+    color: var(--color__white);
+    background: var(--color__dark);
   }
   &:disabled {
     opacity: 1;
@@ -125,7 +63,7 @@ function emitClick(e: Event) {
 }
 
 .filled {
-  color: #fff;
+  color: var(--color__white);
   font-weight: 700;
   line-height: 26px;
   background-color: #f7941d;
@@ -139,35 +77,35 @@ function emitClick(e: Event) {
 }
 
 .outline-light {
-  color: #000;
+  color: var(--color__font);
   font-weight: 700;
   line-height: 26px;
   background: transparent;
-  border: 2px solid #00093c;
+  border: 2px solid var(--color__dark);
   &:not(:active):not(:disabled):hover {
-    color: #fff;
+    color: var(--color__white);
     background-color: #27aae1;
     border: 2px solid transparent;
   }
   &:active:not(:disabled),
   &.active:not(:disabled) {
-    color: #fff;
+    color: var(--color__white);
     background-color: #1490c5;
     border: 2px solid transparent;
   }
 }
 
 .outline-dark {
-  color: #000;
+  color: var(--color__font);
   font-weight: 700;
   line-height: 26px;
   background: transparent;
-  border: 2px solid #00093c;
+  border: 2px solid var(--color__dark);
   &:not(:disabled):hover,
   &:active:not(:disabled),
   &.active:not(:disabled) {
-    color: #fff;
-    background-color: #000;
+    color: var(--color__white);
+    background-color: var(--color__font);
     border: 2px solid transparent;
   }
 }
@@ -191,4 +129,3 @@ function emitClick(e: Event) {
   visibility: hidden;
   opacity: 0;
 }
-</style>
